adding mongodb data base

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,12 +6,21 @@
 
     <div class="box">
       <ul>
-        <% for (let i = 0; i < NewListItems.length; i++) {%>
+        <!-- <% for (let i = 0; i < NewListItems.length; i++) {%>
         <div class="item">
           <input type="checkbox" />
-          <p><%= NewListItems[i] %></p>
+          <p><%= NewListItems[i].name %></p>
         </div>
-        <% } %>
+        <% } %> -->
+       <% NewListItems.forEach((item) => {%>
+        <form action="/delete" method="post">
+          <div class="item">
+            <input type="checkbox" name="checkbox" value="<%= item._id %>" onchange="this.form.submit()"/>
+            <p><%= item.name %></p>
+          </div>
+          <input type="hidden" name="listName" value="<%= ListTitle %>" />
+        </form>
+       <%  });%>
       </ul>
       <form class="item" action="/" method="post">
         <input type="text" name="newitem" placeholder="New Item" autocomplete="off" />
@@ -20,3 +29,5 @@
     </div>
     
     <%- include('footer') -%>
+
+
